WFLY-3854 Update domain testsuite for JDK9